swagger document all routes
